Fix alignment in Project navbar

--- a/src/components/Project/index.css
+++ b/src/components/Project/index.css
@@ -6,6 +6,7 @@
     position: fixed;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     padding: 0.5rem;
     font-family: var(--primary-font);
